:sparkles: 1404. Number of Steps to Reduce a Number in Binary Representation to One